enhancement: added assignments color markings to a tooltip

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1743,3 +1743,12 @@
     content: @fa-var-filter;
   }
 }
+
+.lms-ui-icon-tiphelp {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-question-circle;
+  }
+}
