--- a/templates/default/rt/rtfilter.html
+++ b/templates/default/rt/rtfilter.html
@@ -65,6 +65,15 @@
             </SELECT>
             </label>
             <label class="nobr">
+                {trans("Source")}
+                <SELECT size="1" name="source" OnChange="document.filter.submit();">
+                    <option value="-1">{trans("- all -")}</option>
+                    {foreach Localisation::arraySort($_RT_SOURCES) as $idx => $source}
+                        <OPTION value="{$idx}"{if $filter.source == $idx} selected{/if}>{$source}</OPTION>
+                    {/foreach}
+                </SELECT>
+            </label>
+            <label class="nobr">
             {trans("Owner:")}
                 <input type="hidden" name="owner" value="all">
                 <SELECT size="1" name="owner[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect"
