enhancement: allow to instantly switch user or login as different user ('admin#targetuser' in login form     and button click on user list or user info)

--- a/templates/default/user/userinfobox.html
+++ b/templates/default/user/userinfobox.html
@@ -292,6 +292,9 @@
 				{button type="link-button" label="Edit" icon="edit" href="?m=useredit&id={$userinfo.id}"}
 				{button label="Delete" icon="delete" id="delete-user" data_href="?m=userdel&id={$userinfo.id}"}
 				{if $layout.logid ne $userinfo.id}
+					{if ConfigHelper::checkPrivilege('superuser')}
+						{button label="Switch to" icon="login" href="?m=userswitch&id={$userinfo.id}"}
+					{/if}
 					{button label="Force password change" icon="password" href="?m=useredit&id={$userinfo.id}&forcepasswdchange=1"}
 				{/if}
 				{button type="link-button" label="Change password" icon="password" href="?m=userpasswd&id={$userinfo.id}"}
