enhancement: allow to store mac address in net device (LMS+ #1591) - many macs

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -786,6 +786,15 @@
   }
 }
 
+.lms-ui-icon-checked {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-check;
+  }
+}
+
 .lms-ui-icon-restore {
   .fa-icon;
   .fas;
