--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -1515,6 +1515,17 @@
 								<input type="checkbox" id="transgus-phonecontacts" name="phonecontacts" value="1">
 							</TD>
 						</TR>
+						<TR>
+							<TD class="nobr"><IMG src="img/division.gif" alt=""></TD>
+							<TD class="bold nobr">
+								<label for="transgus-withoutrbe">
+									{trans("Companies without RBE number")}
+								</label>
+							</TD>
+							<TD class="nobr">
+								<input type="checkbox" id="transgus-withoutrbe" name="withoutrbe" value="1">
+							</TD>
+						</TR>
 					</TABLE>
 				</TD>
 			</TR>
