--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -1518,12 +1518,12 @@
 						<TR>
 							<TD class="nobr"><IMG src="img/division.gif" alt=""></TD>
 							<TD class="bold nobr">
-								<label for="transgus-withoutrbe">
-									{trans("Companies without RBE number")}
+								<label for="transgus-soletraders">
+									{trans("Sole traders")}
 								</label>
 							</TD>
 							<TD class="nobr">
-								<input type="checkbox" id="transgus-withoutrbe" name="withoutrbe" value="1">
+								<input type="checkbox" id="transgus-soletraders" name="soletraders" value="1">
 							</TD>
 						</TR>
 					</TABLE>
