enhancement: allow to store mac address in net device (LMS+ #1591) - headers

--- a/templates/default/netdev/netdevmaclist.html
+++ b/templates/default/netdev/netdevmaclist.html
@@ -1,14 +1,14 @@
 <div class="lms-ui-tab-table-row header">
 	<div class="lms-ui-tab-table-wrapper col-2">
 		<div class="lms-ui-tab-table-column label">
-			<strong>{trans("Label:")}</strong>
+			<strong>{trans("Label")}</strong>
 		</div>
 		<div class="lms-ui-tab-table-column mac">
-			<strong>{trans("Mac:")}</strong>
+			<strong>Mac</strong>
 		</div>
 	</div>
 	<div class="lms-ui-tab-table-column main">
-		<strong>{trans("Main:")}</strong>
+		<strong>{trans("Main")}</strong>
 	</div>
 
 	<div class="lms-ui-tab-table-column buttons">
