--- a/templates/default/customer/customerassignments.html
+++ b/templates/default/customer/customerassignments.html
@@ -2,7 +2,7 @@
 
 {css}
 
-{assign var=today value=$smarty.now|date_format:"%x 00:00:00"}{assign var=today value=$today|date_format:"%s"}
+{$today = strtotime('today')}
 
 {$speed_unit_type = ConfigHelper::getConfig('phpui.speed_unit_type', 1000)}
 {$speed_unit_aggregation_threshold = ConfigHelper::getConfig('phpui.speed_unit_aggregation_threshold', 5)}
@@ -119,8 +119,16 @@
 			{foreach $assignments as $a}
 			{block name=$tab_id|cat:"-list-row"}
 			<div class="lms-ui-tab-table-row
-				{if ($a.dateto < $today && $a.dateto) || ($a.at < $today && $a.at > 365)} blend{elseif (($a.datefrom > $today && $a.datefrom && $a.period != $smarty.const.DISPOSABLE) || ($a.period == $smarty.const.DISPOSABLE && $a.at > $today)) && !$a.suspended} alertblend{elseif ($a.suspended)}suspended{/if}
-				{if !$a.commited} lms-ui-assignment-not-commited{/if}"
+				{if ($a.dateto < $today && $a.dateto && $a.periodvalue != $smarty.const.DISPOSABLE) || ($a.at < $today && $a.at > 365 && $a.periodvalue == $smarty.const.DISPOSABLE)}
+					blend
+				{elseif $a.suspended}
+					suspended
+				{elseif ($a.datefrom > $today && $a.datefrom && $a.periodvalue != $smarty.const.DISPOSABLE) || ($a.periodvalue == $smarty.const.DISPOSABLE && $a.at > $today)}
+					alertblend
+				{/if}
+				{if !$a.commited}
+					lms-ui-assignment-not-commited
+				{/if}"
 				data-tariff-type="{$a.tarifftype}"
 				data-expired="{$a.expired}"
 				data-period="{$a.period}"
