--- a/templates/default/config/configlist.html
+++ b/templates/default/config/configlist.html
@@ -65,9 +65,12 @@
 		white-space: normal;
 	}
 
+	.clone-container-center{
+        padding-top: 0.5em;
+	}
+
 	.export-container-center > label {
 		white-space: normal;
-		padding-top: 0.5em;
 	}
 
 	.clone-container-select {
@@ -239,8 +242,9 @@
 						</div>
 
 						<div class="clone-container-center override">
-							<label for="override">{trans('Override existing:')}</label>
+							<label>{trans('Override existing:')}
 								<input type="checkbox" id="override">
+                            </label>
 						</div>
 
 						<div>
@@ -252,10 +256,12 @@
 					<legend>{trans("Export")}</legend>
 					<div class="export-container">
 						<div class="export-container-center">
-							<label for="export_ini">.ini</label>
-							<input type="radio" name="export_filetype" id="export_ini" value="ini" checked>
-							<label for="export_sql">.sql</label>
-							<input type="radio" name="export_filetype" id="export_sql" value="sql">
+							<label>ini
+							    <input type="radio" name="export_filetype" id="export_ini" value="ini" checked>
+                            </label>
+							<label>sql
+							    <input type="radio" name="export_filetype" id="export_sql" value="sql">
+                            </label>
 						</div>
 
 						<div>
@@ -268,8 +274,9 @@
 						{button icon="delete" label="Delete selected" id="delete-configs"}
 					</div>
 					<div class="clone-container-center">
-						<label for="checkall">{trans("Check All")}</label>
+						<label>{trans("Check All")}
 							<INPUT type="checkbox" id="checkall" class="lms-ui-multi-check-all">
+                        </label>
 					</div>
 				</div>
 			</div>
