--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -321,6 +321,7 @@
 	{if $layout.module != 'eventadd'}
 	{box_buttons}
 		{button type="submit" icon="save" accesskey="s" label="Submit"}
+		{button type="submit" icon="save" onclick="location.href = '?m=rtticketadd'" label="Submit and add new"}
 		{button icon="cancel" onclick="location.href = '?m=rtqueueview{if isset($backid)}#{$backid}{/if}'"
 			label="Cancel"}
 	{/box_buttons}
