--- a/css/style.less
+++ b/css/style.less
@@ -1820,6 +1820,13 @@ td.multiselect {
 	}
 }
 
+.ui-selectmenu-menu .ui-widget-content {
+	background-color: #ebe4d6 !important;
+	.ui-menu-divider {
+		margin: 0;
+	}
+}
+
 .fileupload-progress-label {
 	position: absolute;
 	left: 48%;
