--- a/css/style.less
+++ b/css/style.less
@@ -1821,7 +1821,7 @@ td.multiselect {
 }
 
 .ui-selectmenu-menu .ui-widget-content {
-	background-color: #ebe4d6 !important;
+	background-color: @lucid !important;
 	.ui-menu-divider {
 		margin: 0;
 	}
