improvement: fiber/fiber icon introduced (better this than nothing)

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1752,3 +1752,13 @@
     content: @fa-var-filter;
   }
 }
+
+.lms-ui-icon-fiber,
+.lms-ui-icon-fibre {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-digital-ocean;
+  }
+}
