--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -1207,15 +1207,6 @@
   }
 }
 
-.lms-ui-icon-fiber {
-  .fa-icon;
-  .fas;
-  .lms-ui-icon;
-  &:before {
-    content: @fa-var-fire;
-  }
-}
-
 .lms-ui-icon-hosting {
   .fa-icon;
   .fas;
@@ -1756,7 +1747,7 @@
 .lms-ui-icon-fiber,
 .lms-ui-icon-fibre {
   .fa-icon;
-  .fas;
+  .fab;
   .lms-ui-icon;
   &:before {
     content: @fa-var-digital-ocean;
