enhancement: new 'finances_view' user permission allows to grant view financial documents view for given user

--- a/templates/default/customer/customeredit.html
+++ b/templates/default/customer/customeredit.html
@@ -43,7 +43,9 @@
 	{include file="customer/customerassignments.html"}
 {/block}
 {block name="customerbalancebox"}
-	{include file="customer/customerbalancebox.html" limit=-10}
+	{if ConfigHelper::checkPrivilege('read_only') || ConfigHelper::checkPrivilege('finances_view') || ConfigHelper::checkPrivilege('financial_operations') || ConfigHelper::checkPrivilege('finances_management')}
+		{include file="customer/customerbalancebox.html" limit=-10}
+	{/if}
 {/block}
 </div>
 <script>
